Add normalizeElo and headElo to CSS selectors

--- a/EloCalc.html
+++ b/EloCalc.html
@@ -274,10 +274,10 @@
 			margin-top: 1rem; 
 			gap: .5rem; 
 		}
-		#allowTies { 
+		#allowTies, #normalizeElo { 
 			width: auto; 
 		}
-		#allowTiesLabel { 
+		#allowTiesLabel, #normalizeEloLabel { 
 			margin: 0; 
 		}
 		#competitorsHeader { 
@@ -288,7 +288,7 @@
 			font-size: .85rem; 
 			opacity: .8; 
 		}
-		#headWin, #headTie { 
+		#headWin, #headTie, #headElo { 
 			flex: 1; 
 			font-size: .85rem; 
 			opacity: .8; 
